@@ -201,7 +201,8 @@ class Renderer : public RunTimeTyped
 		virtual Imath::M44f getTransform( const std::string &coordinateSystem ) const = 0;
 		/// Concatenates the specified transform onto the current transform.
 		virtual void concatTransform( const Imath::M44f &m ) = 0;
-		/// Creates a named coordinate system from the current transform.
+		/// Creates a named coordinate system from the current transform. Coordinate systems
+		/// are scoped by attributeBegin/attributeEnd blocks.
 		virtual void coordinateSystem( const std::string &name ) = 0;
 		//@}
 
