@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2008, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2008-2011, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -46,16 +46,70 @@ class CoordinateSystemTest( unittest.TestCase ) :
 
 		r = IECoreRI.Renderer( self.outputFileName )
 
-		r.worldBegin()
-
-		c = IECore.CoordinateSystem( "helloWorld" )
-		c.render( r )
-
-		r.worldEnd()
+		with IECore.WorldBlock( r ) :
+			c = IECore.CoordinateSystem( "helloWorld" )
+			c.render( r )
 
 		l = "".join( file( self.outputFileName ).readlines() )
-		self.assert_( "CoordinateSystem \"helloWorld\"" in l )
+		self.failUnless( "ScopedCoordinateSystem \"helloWorld\"" in l )
+		self.failIf( "TransformBegin" in l )
+		self.failIf( "TransformEnd" in l )
+		
+	def testTransform( self ) :
+	
+		r = IECoreRI.Renderer( self.outputFileName )
 
+		with IECore.WorldBlock( r ) :
+			c = IECore.CoordinateSystem(
+				"helloWorld",
+				IECore.MatrixTransform( IECore.M44f.createTranslated( IECore.V3f( 1 ) ) ),
+			)
+			c.render( r )
+
+		l = "".join( file( self.outputFileName ).readlines() )
+		self.failUnless( "ScopedCoordinateSystem \"helloWorld\"" in l )
+		self.failUnless( "TransformBegin" in l )
+		self.failUnless( "TransformEnd" in l )
+		self.failUnless( "ConcatTransform" in l )
+	
+	def testScoping( self ) :
+	
+		class TestProcedural( IECore.ParameterisedProcedural ) :
+		
+			def __init__( self ) :
+			
+				IECore.ParameterisedProcedural.__init__( self, "" )
+			
+			def doBound( self, args ) :
+			
+				return IECore.Box3f( IECore.V3f( -10 ), IECore.V3f( 10 ) )
+				
+			def doRender( self, renderer, args ) :
+			
+				self.coordinateSystem = renderer.getTransform( "testCoordSys" )
+
+	
+		renderer = IECoreRI.Renderer( "" )
+		
+		procedurals = []
+		with IECore.WorldBlock( renderer ) :
+		
+			for i in range( 0, 10 ) :
+			
+				renderer.setAttribute( "user:proceduralIndex", IECore.IntData( i ) )
+				
+				g = IECore.Group()
+				g.addState( IECore.CoordinateSystem( "testCoordSys", IECore.MatrixTransform( IECore.M44f.createTranslated( IECore.V3f( i ) ) ) ) )
+				p = TestProcedural()
+				g.addChild( p )
+				procedurals.append( p )
+				
+				g.render( renderer )
+				
+		for i in range( 0, 10 ) :
+			
+			self.assertEqual( procedurals[i].coordinateSystem.translation(), IECore.V3f( i ) )
+	
 	def tearDown( self ) :
 
 		if os.path.exists( self.outputFileName ) :
